--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -2,9 +2,200 @@
 @import "fonts"
 @import "container"
 
-.item
-	border: 1px solid green 
-	font-size: 30px
+// *
+// 	min-height: 0
+// 	min-width: 0
+
+
+body
+	min-height: 1000px
+	min-width: 430px
+	font-family: $main-font
+	font-size: 21px
+
+body.locked
+	overflow: hidden
+
+a, a:hover 
+	color: inherit
+	text-decoration: none
+
+.header-wrap
+	background: url("../img/header-bg.jpg") no-repeat 
+	background-size: cover
+
+.header 
+	padding-top: 35px
+	color: #fff
+	font-size: 18px
+	font-weight: 500
+	text-transform: uppercase
+	// background-color: rgba(0, 0, 0, .8)
+.header__row
+	display: flex
+	justify-content: space-between
+	align-items: top
+.header__logo
+	flex-basis: 15%
+.header__city
+	flex-basis: 15%
+.header__nav
+	flex-basis: 55%
+.header__phone
+	flex-basis: 15%
+.header__burger
+	display: none
+	
+.logo 
+	position: relative
+	display: block
+	width: 145px
+	padding-left: 30px
+	font-size: 20px
+	line-height: 1
+	font-weight: 500
+	color: #fff 
+	text-transform: uppercase
+	text-decoration: none
+	&::before 
+		content: ""
+		position: absolute
+		left: 0
+		top: 4px
+		width: 22px
+		height: 32px
+		background: url("../img/logo.png") no-repeat left
+
+.nav__list
+	margin: 0
+	padding: 0
+	list-style: none
+.nav__item 
+	display: inline-block
+	margin-right: 45px
+	&:last-child 
+		margin-right: 0
+.nav__link 
+	color: #fff
+	font-weight: 500
+
+.header__phone
+	font-weight: 900
+
+.furnaces
+	padding: 70px 0px 85px 0px
+	color: #fff 
+
+.furnaces__row
+	display: flex
+	justify-content: space-between
+	align-items: top
+.furnaces__about
+	flex-basis: 40%
+.furnaces__gallery
+	flex-basis: 60%
+
+.furnaces__title
+	margin-bottom: 30px
+	font-size: 40px 
+	font-weight: 900
+	line-height: 1
+	text-transform: uppercase
+.furnaces__text  
+	margin-bottom: 40px
+	font-size: 19px
+	line-height: 1.2
+
+.button
+	padding: 15px 35px
+	border:  none
+	border-radius: 5px
+	font-size: 19px
+	font-weight: 900
+	color: #fff 
+	text-transform: uppercase
+	background: rgb(0,212,255)
+	background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(0,142,214,1) 100%, rgba(2,0,36,1) 100%)
+	transition: all .5s
+	outline: none
+	&:hover
+		box-shadow: 0 0 5px 0 #000
+		transform: scale(1.05)
+		background: rgb(2,0,36)
+		background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,142,214,1) 0%, rgba(0,212,255,1) 100%) 
+
+.furnaces__gallery
+	min-height: 0
+	min-width: 0
+.furnaces__slider 
+	position: relative
+	.slick-dots
+		position: absolute
+		bottom: -31px
+		padding: 0
+		margin: 0
+		list-style: none
+		li 
+			display: inline-block
+			margin-right: 10px
+			button 
+				padding: 0
+				width: 11px
+				height: 11px
+				border: 2px solid #fff
+				border-radius: 50%	
+				font-size: 0
+				background-color: transparent
+				outline: none
+				transition: all .3s
+		li.slick-active 
+			button 
+				transform: scale(1.5)
+				background-color: #05a2ec
+	.slick-arrow 
+		position: absolute
+		bottom: -37px
+		z-index: 2
+		font-size: 0
+		border: 2px solid #fff
+		width: 27px
+		height: 27px
+		border-radius: 50%
+		background-color: transparent
+		outline: none
+		transition: all .3s
+		&::after 
+			content: ''
+			position: absolute
+			top: 50%
+			left: 50%
+			transform: translate(-50%, -50%)
+			width: 7px
+			height: 7px
+			border-top: 2px solid #fff 
+			border-left: 2px solid #fff 
+	.slick-prev 
+		right: 37px
+		transform: rotate(-45deg)
+		&:hover 
+			background-color: #05a2ec
+			transform: scale(1.1) rotate(-45deg)
+		&:active 
+			transform: scale(.8) rotate(-45deg)
+	.slick-next
+		right: 0
+		transform: rotate(135deg)
+		&:hover 
+			background-color: #05a2ec
+			transform: scale(1.1) rotate(135deg)
+		&:active 
+			transform: scale(.8) rotate(135deg)
+
+
+
+  
+
+
 
 @import "media"
      
