--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -9,7 +9,7 @@
 
 body
 	min-height: 1000px
-	min-width: 430px
+	min-width: 500px
 	font-family: $main-font
 	font-size: 21px
 
@@ -21,7 +21,7 @@ a, a:hover
 	text-decoration: none
 
 .header-wrap
-	background: url("../img/header-bg.jpg") no-repeat 
+	background: url("../img/header-bg.jpg") no-repeat center
 	background-size: cover
 
 .header 
@@ -138,16 +138,16 @@ a, a:hover
 		li 
 			display: inline-block
 			margin-right: 10px
-			button 
-				padding: 0
-				width: 11px
-				height: 11px
-				border: 2px solid #fff
-				border-radius: 50%	
-				font-size: 0
-				background-color: transparent
-				outline: none
-				transition: all .3s
+		button 
+			padding: 0
+			width: 11px
+			height: 11px
+			border: 2px solid #fff
+			border-radius: 50%	
+			font-size: 0
+			background-color: transparent
+			outline: none
+			transition: all .3s
 		li.slick-active 
 			button 
 				transform: scale(1.5)
