--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -16,14 +16,32 @@
     font-size: 15px
   .nav__item 
     margin-right: 12px
+
+  .furnaces__gallery
+    flex-basis: 58%
   
 /* <992px (720px) */
 +media-breakpoint-down(md)
   .header__nav
     flex-basis: 40%
 
+  .furnaces
+    padding: 50px 0
+  
+  .furnaces__title 
+    margin-bottom: 20px
+    font-size: 30px
+
+  .furnaces__text 
+    margin-bottom: 20px
+
+  .button
+    font-size: 16px
+
 /* <768px (540px) */
 +media-breakpoint-down(sm)
+  .header-wrap 
+    margin-bottom: 445px
   .header__row
     align-items: center
   .header__logo
@@ -35,10 +53,11 @@
   
   .header 
     position: fixed
+    z-index: 50
     top: 0
     left: 0
     width: 100%
-    padding: 10px 0
+    padding: 15px 0
     &::before 
       content: ''
       position: absolute
@@ -48,7 +67,7 @@
       width: 100%
       height: 100%
     &.active::before
-      background-color: rgba(0,60,96,.9)
+      background-color: rgba(0,60,96, .95)
 
   .header__nav
     position: fixed
@@ -118,11 +137,67 @@
 
 
   .furnaces
-    padding-top: 120px
+    padding-top: 100px
 
+  .furnaces__row
+    position: relative
+    flex-wrap: wrap
+
+  .furnaces__about
+    flex-basis: 100%
+
+  .furnaces__title
+    font-size: 24px
+
+  .furnaces__btn 
+    position: absolute
+    left: 50%
+    transform: translateX(-50%)
+    bottom: -455px
+    padding: 15px 25px
+    font-weight: 500
+    white-space: nowrap
+    &:hover 
+      transform: translateX(-50%)
 
   .furnaces__gallery
-    z-index: -1
+    position: absolute
+    bottom: -315px
+    width: 100%
+
+  .furnaces__slider
+    .slick-dots
+      left: 50%
+      transform: translate(-50%, 0)
+      button
+        border-color: #d8d8d8
+    .slick-arrow 
+      bottom: 50%
+      border: none
+      &::after 
+        width: 20px
+        height: 20px
+        border-color: #05a2ec
+    .slick-prev
+      left: -35px
+      &:hover 
+        background-color: transparent
+        transform: scale(1) rotate(-45deg)
+      &:active 
+        transform: scale(.8) rotate(-45deg)
+    .slick-next
+      right: -35px
+      &:hover 
+        background-color: transparent
+        transform: scale(1) rotate(135deg)
+      &:active 
+        transform: scale(.8) rotate(135deg)
+      
+
+
+  
+
+
 
 /* <576px (auto) */
 +media-breakpoint-down(xs)
