--- a/app/sass/layout/header/_header.sass
+++ b/app/sass/layout/header/_header.sass
@@ -1,20 +1,3 @@
-@import "vars"
-@import "fonts"
-@import "container"
-
-body
-	min-height: 1000px
-	min-width: 320px
-	font-family: $main-font
-	font-size: 21px
-   
-body.locked
-	overflow: hidden
-
-a, a:hover 
-	color: inherit
-	text-decoration: none
-
 .header-wrap
 	background: url("../img/header-bg.jpg") no-repeat center
 	background-size: cover
@@ -37,29 +20,10 @@ a, a:hover
 	flex-basis: 55%
 .header__phone
 	flex-basis: 15%
+	font-weight: 900
 .header__burger
 	display: none
 	
-.logo 
-	position: relative
-	display: block
-	width: 145px
-	padding-left: 30px
-	font-size: 20px
-	line-height: 1
-	font-weight: 500
-	color: #fff 
-	text-transform: uppercase
-	text-decoration: none
-	&::before 
-		content: ""
-		position: absolute
-		left: 0
-		top: 4px
-		width: 22px
-		height: 32px
-		background: url("../img/logo.png") no-repeat left
-
 .nav__list
 	margin: 0
 	padding: 0
@@ -73,13 +37,9 @@ a, a:hover
 	color: #fff
 	font-weight: 500
 
-.header__phone
-	font-weight: 900
-
 .furnaces
 	padding: 70px 0px 85px 0px
 	color: #fff 
-
 .furnaces__row
 	display: flex
 	justify-content: space-between
@@ -88,7 +48,6 @@ a, a:hover
 	flex-basis: 40%
 .furnaces__gallery
 	flex-basis: 60%
-
 .furnaces__title
 	margin-bottom: 30px
 	font-size: 40px 
@@ -99,24 +58,6 @@ a, a:hover
 	margin-bottom: 40px
 	font-size: 19px
 	line-height: 1.2
-
-.button
-	padding: 15px 35px
-	border:  none
-	border-radius: 5px
-	font-size: 19px
-	font-weight: 900
-	color: #fff 
-	text-transform: uppercase
-	background: rgb(0,212,255)
-	background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(0,142,214,1) 100%, rgba(2,0,36,1) 100%)
-	transition: all .5s
-	outline: none
-	&:hover
-		box-shadow: 0 0 5px 0 #000
-		transform: scale(1.05)
-		background: rgb(2,0,36)
-		background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,142,214,1) 0%, rgba(0,212,255,1) 100%) 
 
 .furnaces__gallery
 	min-height: 0
@@ -185,11 +126,4 @@ a, a:hover
 		&:active 
 			transform: scale(.8) rotate(135deg)
 
-
-
-  
-
-
-
-@import "media"
-     
+@import '../header/_header-media.sass'
