Added section services

--- a/app/sass/layout/header/_header.sass
+++ b/app/sass/layout/header/_header.sass
@@ -1,6 +1,7 @@
 .header-wrap
 	background: url("../img/header-bg.jpg") no-repeat center
 	background-size: cover
+	margin-bottom: 70px
 
 .header 
 	padding-top: 35px
