--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -6,7 +6,10 @@
 @import 'base/_base.sass'
 
 @import 'layout/header/_header.sass'
+@import 'layout/services/_services.sass'
 
 @import 'components/_button.sass'
 @import 'components/_logo.sass'
+
+@import 'vendors/_slick-custom.sass'
 
