--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -10,3 +10,12 @@ body.locked
 a, a:hover 
 	color: inherit
 	text-decoration: none
+
+.caption
+	text-align: center
+	font-size: 40px
+	font-weight: 900
+	color: #000
+	text-transform: uppercase
+	+media-breakpoint-down(sm)
+		font-size: 24px
