Fix button error

--- a/app/sass/layout/header/_header-media.sass
+++ b/app/sass/layout/header/_header-media.sass
@@ -162,13 +162,14 @@
   .furnaces__btn 
     position: absolute
     left: 50%
-    transform: translateX(-50%)
+    transform: translateX(-50%) 
     bottom: -380px
     padding: 15px 25px
     font-weight: 500
     white-space: nowrap
     &:hover 
-      transform: translateX(-50%)
+      transform: translateX(-50%) scale(1.05)
+    
 
   .furnaces__gallery
     position: absolute
