Added features section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -10,6 +10,8 @@
 
 @import 'layout/header/_header.sass'
 @import 'layout/services/_services.sass'
+@import 'layout/_founder.sass'
+@import 'layout/_features.sass'
 
 @import 'vendors/_slick-custom.sass'
 
