--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -3,6 +3,8 @@ body
 	min-width: 320px
 	font-family: $main-font
 	font-size: 21px
+	font-weight: 400
+	color: #000
    
 body.locked
 	overflow: hidden
