--- a/app/sass/components/_button.sass
+++ b/app/sass/components/_button.sass
@@ -16,7 +16,8 @@
 		background: rgb(2,0,36)
 		background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,142,214,1) 0%, rgba(0,212,255,1) 100%) 
 
-/* <992px (720px) */
-+media-breakpoint-down(md)
-  .button
-    font-size: 16px
+	+media-breakpoint-down(md)
+		font-size: 16px
+		font-weight: 500
+
+    
