--- a/app/sass/layout/services/_services.sass
+++ b/app/sass/layout/services/_services.sass
@@ -1,19 +1,14 @@
 .services 
   color: #fff
+  margin-bottom: 85px
+  +media-breakpoint-down(sm)
+    margin-bottom: 0px
 
 .services__row
   display: flex
   flex-wrap: wrap
   margin-left: -15px
   margin-right: -15px
-
-.services__slider
-  .slick-arrow
-    top: 30px
-  .slick-prev 
-    right: 80px
-  .slick-next
-    right: 40px 
 
 .services__col
   flex-basis: 50%
@@ -23,6 +18,14 @@
   +media-breakpoint-down(md)
     flex-basis: 100%
 
+.services__slider
+  .slick-arrow
+    top: 30px
+  .slick-prev 
+    right: 80px
+  .slick-next
+    right: 40px 
+
 .services__caption
   margin-bottom: 60px
   +media-breakpoint-down(sm)
@@ -30,20 +33,21 @@
 
 .services__item
   padding: 230px 70px 40px 70px
+  height: 100%
   background-repeat: no-repeat
   background-size: cover
-  &--img-1 
+  &_img-1 
     background-image: url('../img/services-1.jpg')
-  &--img-2 
+  &_img-2 
     background-image: url('../img/services-2.jpg')
-  &--img-3 
+  &_img-3 
     background-image: url('../img/services-3.jpg')
-  &--img-4 
+  &_img-4 
     background-image: url('../img/services-4.jpg')
-  &--img-5
-    background-image: url('../img/services-1.jpg')
-  &--img-6
-    background-image: url('../img/services-2.jpg')
+  &_img-5
+    background-image: url('../img/services-5.jpg')
+  &_img-6
+    background-image: url('../img/services-6.jpg')
   
   +media-breakpoint-down(sm)
     padding: 160px 40px 40px 40px 
