--- a/app/sass/layout/_projects.sass
+++ b/app/sass/layout/_projects.sass
@@ -128,7 +128,7 @@
   height: 100%
   padding: 50px 40px
   color: #fff
-  background: url('../../img/projects-bg.jpg') no-repeat center
+  background: url('../img/projects-bg.jpg') no-repeat center
   background-size: cover
   +media-breakpoint-down(lg)
     padding: 30px
