--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -14,6 +14,7 @@
 @import 'layout/_features.sass'
 @import 'layout/_projects.sass'
 @import 'layout/_callback.sass'
+@import 'layout/_feedback.sass'
 
 @import 'vendors/_slick-custom.sass'
 
