--- a/app/sass/layout/_callback.sass
+++ b/app/sass/layout/_callback.sass
@@ -4,7 +4,7 @@
   background-size: cover
   +media-breakpoint-down(sm)
     padding: 50px 0
-    background: url('../../img/callback-sm-bg.jpg') no-repeat center
+    background: url('../img/callback-sm-bg.jpg') no-repeat center
     background-size: cover
 
 
