--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -9,12 +9,13 @@
 @import 'components/_logo.sass'
 
 @import 'layout/header/_header.sass'
-@import 'layout/services/_services.sass'
+@import 'layout/_services.sass'
 @import 'layout/_founder.sass'
 @import 'layout/_features.sass'
 @import 'layout/_projects.sass'
 @import 'layout/_callback.sass'
 @import 'layout/_feedback.sass'
+@import 'layout/_footer.sass'
 
 @import 'vendors/_slick-custom.sass'
 
