--- a/app/sass/layout/_feedback.sass
+++ b/app/sass/layout/_feedback.sass
@@ -1,7 +1,8 @@
 .feedback
   padding: 100px 0
   +media-breakpoint-down(sm)
-    padding: 50px 0
+    padding-top: 50px
+    padding-bottom: 80px
     
 
 .feedback__slider
